# that-monorepo

./: .commitlintrc.js  .cz.json  .gitignore  .lintstagedrc  .prettierrc  README.md  migrations.json  nx.json  package-lock.json  package.json
.github/: auto_assign.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  MAINTENANCE_REQUEST.yml
.github/workflows/: auto-assign-issues.yml  auto-assign.yml  label-feature.yml  label-support.yml  stale.yml
.husky/: pre-push  prepare-commit-msg
apps/mobile/: package.json
edge/: README.md
edge/hello-world/api/: hello_world.ts
edge/hello-world/wasm/: Cargo.toml
edge/hello-world/wasm/pkg/: wasm.d.ts  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
read_me/: CODE_OF_CONDUCT.md  SECURITY.md
